[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"

[[bench]]
name = "aoc-2015"
harness = false

[[bin]]
name = "advent-of-code"
path = "src/bin/main.rs"