[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-client = "0.2.0"
criterion = "0.5.1"
num_cpus = "1.15.0"
md5-rs = "0.1.5"
itertools = "0.12.0"
num = "0.4.1"

[[bench]]
name = "aoc-2015"
harness = false

[[bench]]
name = "aoc-2016"
harness = false

[[bench]]
name = "aoc-2017"
harness = false

[[bench]]
name = "aoc-2023"
harness = false

[[bench]]
name = "aoc-2024"
harness = false

[[bin]]
name = "advent-of-code"
path = "src/bin/main.rs"